[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nutils-SI"
authors = [{name = "Evalf", email = "info@evalf.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/evalf/nutils-SI/"

[tool.flit.module]
name = "nutils.SI"
